Fix banner text align to start

--- a/17-travel-landing-page/assets/css/styles.scss
+++ b/17-travel-landing-page/assets/css/styles.scss
@@ -67,9 +67,9 @@ body {
   }
   .banner-text {
     @include mixins.normal-text-styles();
-    color: variables.$white;
     margin-bottom: 5rem;
     font-weight: 500;
+    text-align: start;
   }
 
   @media (min-width: 768px) {
